--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #a3a7a8;
+  background-color: #919394;
   font-family: 'Roboto', sans-serif;
   display: flex;
   align-items: center;
@@ -20,7 +20,7 @@ img {
 }
 
 .card {
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   overflow: hidden;
   width: 350px;
@@ -37,13 +37,14 @@ img {
 }
 
 .card-content {
-  background-color: #fff;
+  background-color: rgba(233, 233, 233, 0.705);
   padding: 30px;
 }
 
 .card-title {
   height: 20px;
   margin: 0;
+  text-shadow: 4px -3px 3px black;
 }
 
 .card-excerpt {
